--- a/i18n/ja/strings.xml
+++ b/i18n/ja/strings.xml
@@ -5,4 +5,5 @@
 	<string name="menu_favorite">お気に入り</string>
 	<string name="menu_app">おすすめアプリ</string>
 	<string name="win_kaomoji">顔文字</string>
+	<string name="win_history">履歴</string>
 </resources>
